tests/spec/emit/snapshots/assoc_fn_returning_option_self.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Thing {
    name: string,
  }
  
  impl Thing {
    fn maybe_create(name: string) -> Option<Thing> {
      if name.length() > 0 { Some(Thing { name: name }) }
      else { None }
    }
  }
  
  fn test() -> Option<Thing> {
    Thing.maybe_create("hello")
  }
---
package main

type Thing struct {
	name string
}

func Thing_maybeCreate(name string) (Thing, bool) {
	if len(name) > 0 {
		return Thing{name: name}, true
	}
	return Thing{}, false
}

func test() (Thing, bool) {
	return Thing_maybeCreate("hello")
}
