tests/spec/emit/snapshots/auto_address_empty_struct_literal_receiver.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Foo {}
  
  impl Foo {
    fn need_ref(self: Ref<Foo>) {}
  }
  
  fn test() {
    Foo {}.need_ref()
  }
---
package main

type Foo struct{}

func (f *Foo) needRef() {}

func test() {
	(&Foo{}).needRef()
}
