tests/spec/emit/snapshots/auto_address_function_call_receiver.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Foo { value: int }
  
  impl Foo {
    fn increment(self: mut Ref<Foo>) {
      self.value = self.value + 1
    }
  }
  
  fn make_foo() -> Foo {
    Foo { value: 42 }
  }
  
  fn test() {
    make_foo().increment()
  }
---
package main

type Foo struct {
	value int
}

func (f *Foo) increment() {
	f.value++
}

func makeFoo() Foo {
	return Foo{value: 42}
}

func test() {
	ref := makeFoo()
	ref.increment()
}
