tests/spec/emit/snapshots/auto_address_receiver_ref_temp_var_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box { x: int }
  
  impl Box {
    fn inc(self: mut Ref<Box>) -> int {
      self.*.x = self.*.x + 1
      self.*.x
    }
  }
  
  fn make_box() -> Box {
    Box { x: 1 }
  }
  
  fn main() {
    let v = make_box().inc()
    let ref_1 = 7
    let _ = v
    let _ = ref_1
  }
---
package main

type Box struct {
	x int
}

func (b *Box) inc() int {
	b.x++
	return b.x
}

func makeBox() Box {
	return Box{x: 1}
}

func main() {
	ref := makeBox()
	v := ref.inc()
	_ = v
}
