tests/spec/emit/snapshots/auto_addressed_index_receiver_pinned_before_effectful_arg.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Cell { v: int }
  
  impl Cell {
    fn add<T>(self: mut Ref<Cell>, delta: int) {
      self.v += delta
    }
  }
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    7
  }
  
  fn run() {
    let mut items = [Cell { v: 0 }, Cell { v: 0 }]
    let mut i = 0
    items[i].add<int>(bump(&i))
  }
---
package main

type Cell struct {
	v int
}

func Cell_add[T any](self *Cell, delta int) {
	self.v += delta
}

func bump(i *int) int {
	*i = 1
	return 7
}

func run() {
	items := []Cell{{v: 0}, {v: 0}}
	i := 0
	arg := &items[i]
	Cell_add[int](arg, bump(&i))
}
