tests/spec/emit/snapshots/auto_addressed_receiver_with_own_setup_pinned_before_effectful_arg.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Cell { a: int, b: int }
  
  impl Cell {
    fn add<T>(self: mut Ref<Cell>, delta: int) {
      self.b += delta
    }
  }
  
  fn seed() -> Result<int, error> {
    Ok(1)
  }
  
  fn bump(i: mut Ref<int>) -> Result<int, error> {
    i.* = 99
    Ok(7)
  }
  
  fn run() -> Result<(), error> {
    let mut i = 0
    Cell { a: seed()?, b: i }.add<int>(bump(&i)?)
    Ok(())
  }
---
package main

type Cell struct {
	a int
	b int
}

func Cell_add[T any](self *Cell, delta int) {
	self.b += delta
}

func seed() (int, error) {
	return 1, nil
}

func bump(i *int) (int, error) {
	*i = 99
	return 7, nil
}

func run() error {
	i := 0
	ret, err := seed()
	if err != nil {
		return err
	}
	ref := &Cell{
		a: ret,
		b: i,
	}
	ret_1, err_1 := bump(&i)
	if err_1 != nil {
		return err_1
	}
	Cell_add[int](ref, ret_1)
	return nil
}
