tests/spec/emit/snapshots/auto_addressed_struct_literal_receiver_pinned_before_effectful_arg.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Cell { v: int }
  
  impl Cell {
    fn add<T>(self: mut Ref<Cell>, delta: int) {
      self.v += delta
    }
  }
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    7
  }
  
  fn run() {
    let mut i = 0
    Cell { v: i }.add<int>(bump(&i))
  }
---
package main

type Cell struct {
	v int
}

func Cell_add[T any](self *Cell, delta int) {
	self.v += delta
}

func bump(i *int) int {
	*i = 1
	return 7
}

func run() {
	i := 0
	arg := &Cell{v: i}
	Cell_add[int](arg, bump(&i))
}
